# advent-of-code-2024

./: .gitignore  pyproject.toml
src/: day_00.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_09b_v2.py  day_10.py  day_11.py  day_12.py  day_12_v2.py  day_13.py  day_14.py
src/utilities/: grid.py  timer.py
tests/: day_10_test.py  day_12_test.py
